tests/miniJava/neg/005355_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { String int [] java ( ) { return 0 ; } }
